# agentic-with-tools-example

./: .gitignore  .pylintrc  README.md  app.py  apply_consistency_fix.py  chat_tools.py  enhanced_tool_analysis.py  generate_chats.py  openai_request.py  pyproject.toml  requirements.txt  simple_app.py  simple_consistency_test.py  start-app.bat  start-app.ps1  test_api.py  test_classification.py  test_final_8_queries.py  test_hardship_vs_missed.py  topics.json
angular-app/: README.md  angular.json  install-packages.bat  install-packages.sh  package-lock.json  package.json  test.html  tsconfig.json
angular-app/src/: index.html  main.ts  styles.css
angular-app/src/app/: api.service.ts  app-simple.component.html  app.component.css  app.component.html  app.component.ts
diagrams/: simplified_financial_chat_agent.md
